--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "yup": "^0.32.11"
   }
 }
