--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/node": "^17.0.30",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
