--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/express": "^4.17.13",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
