--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.79",
     "@mui/material": "^5.6.3",
+    "@reduxjs/toolkit": "^1.8.1",
     "dayjs": "^1.11.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
