--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,9 @@
 SERVER_PORT = 3000
 CLIENT_PORT = 3001
+
+PG_HOST = host
+PG_PORT = 5432
+PG_DATABASE = postgres
+PG_LOGIN = postgres
+PG_PASSWORD = postgres
+PG_SCHEMA = schema
