--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "pg-promise": "^10.11.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
