--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,19 @@
     "dev": "ts-node-dev --respawn --require dotenv/config src/index.ts dotenv_config_path=../.env.development"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "log4js": "^6.4.6",
     "pg-promise": "^10.11.1",
+    "response-time": "^2.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/express": "^4.17.13",
+    "@types/response-time": "^2.3.5",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
