--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "dev": "ts-node-dev --respawn --require dotenv/config src/index.ts dotenv_config_path=../.env.development"
+    "start": "node --require dotenv/config build/index.js dotenv_config_path=../.env.production",
+    "dev": "ts-node-dev --respawn --require dotenv/config src/index.ts dotenv_config_path=../.env.development",
+    "build": "rm -rf build && tsc --outDir build"
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
@@ -12,6 +14,7 @@
     "response-time": "^2.3.2",
     "yup": "^0.32.11"
   },
+  "type": "commonjs",
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/express": "^4.17.13",
